--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <h1>Hello Github!</h1>
     <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-
+<div><img src="space-image.jfif" alt="Hello World from Space"
+    style="width:100%;max-width:960px"></div>
+    <p>This is the first file in my new Git Repo.</p>
+    <p>A new line in our file!</p>
 </body>
 </html>
