--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <h1>Hello Github!</h1>
     <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-
+<div><img src="beatiful view.jfif" alt="Hello Git" style="width:100%;max-width:640px"></div>
 </body>
 </html>
